--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.13.1",
     "@auth/core": "^0.34.2",
+    "@auth0/nextjs-auth0": "^4.0.1",
     "@radix-ui/react-slot": "^1.1.2",
     "@supabase/supabase-js": "^2.48.1",
     "@tanstack/react-query": "^5.66.3",
